# FastApi-dev

./: pyproject.toml
tests/: test_app.py
