[tool.poetry]
name = "fastapis"
version = "0.1.0"
description = ""
authors = ["Wesley-Luan <wesleyluanofficial@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"
fastapi = "^0.115.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev fastapis/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastapis -vv'
post_test = 'coverage html'



[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
